examples/legacy/invalid_scl/dup_type_decl.scl
type ObjectId <: usize
type ObjectId = usize
